--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -120,14 +120,11 @@ node('maven') {
 					//String fileContents = new File('.scannerwork/report-task.txt').getText('UTF-8')
 					def ceTaskId = ( fileContents =~ "ceTaskId=(.*)")[0][1]
 					
-					def jq = tool 'jq';
-					
-					${jq}
-					
+					sh "wget https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 -o jq;chmod +x jq"
 			
 					echo "sonarId ${ceTaskId}"
 					def sonarUrl = "http://sonarqube:9000/sonar/api/ce/task?id=${ceTaskId}"
-					def sonarStatus = sh script: "wget -qO- '${sonarUrl}' --no-proxy --content-on-error | jq -r '.task' | jq -r '.status' ",returnStdout:true
+					def sonarStatus = sh script: "wget -qO- '${sonarUrl}' --no-proxy --content-on-error | ./jq -r '.task' | ./jq -r '.status' ",returnStdout:true
 					echo "Sonar status ... ${sonarStatus}"
 					if(sonarStatus.trim() == "SUCCESS"){
 						echo "BREAK";
