--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -84,8 +84,9 @@ node('maven') {
 
 
 node () {
-	unstash target-stash
 	stage('SonarQube analysis') {
+		unstash "target-stash"
+		
 		def pom = readMavenPom file: 'fhir-patient-service/pom.xml'
 		writeFile encoding: 'UTF-8', file: 'sonar-project.properties', text: """
       sonar.projectKey=$pom.groupId:$pom.artifactId
