--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -50,22 +50,17 @@ node('maven') {
         echo "In Build"
         sh "mvn -s configuration/settings.xml -Dbuild.number=${release_number} -f fhir-patient-service clean install deploy"
         junit 'fhir-patient-service/target/surefire-reports/*.xml'
-		
-		sh "ls"
-		sh "ls fhir-patient-service"
-		sh "ls fhir-patient-service/target"
+
         
        // step([$class: 'XUnitBuilder',
     	//	thresholds: [[$class: 'FailedThreshold', unstableThreshold: '1']],
     	//	tools: [[$class: 'JUnitType', pattern: 'target/surefire-reports/*.xml']]])
         
-        //stash includes: 'fhir-patient-service/target/*.jar', name: 'artifacts'
+        stash includes: 'fhir-patient-service/target/*.jar', name: 'artifacts'
+        stash includes: 'fhir-patient-service/Dockerfile', name: 'docker'
        // stash includes: 'fhir-patient-service/**', name: 'project-stash'
     }
 	
-	
-//}
-//node () {
 	stage('SonarQube analysis') {
 		//unstash "project-stash"
 		
@@ -174,38 +169,31 @@ node('maven') {
 //			  }
 //		  }
 		  
-		  
-		  
-  //    stage("Quality Gate") {
-  //      steps {
-  //        timeout(time: 1, unit: 'HOURS') {
-  //           // Parameter indicates whether to set pipeline to UNSTABLE if Quality Gate fails
-  //           // true = set pipeline to UNSTABLE, false = don't
-  //           // Requires SonarQube Scanner for Jenkins 2.7+
-  //	       waitForQualityGate abortPipeline: true
-  //        }
-  //      }
-  //    }
   }
   
   
   
   
   
-  //node () {
-  //    stage('DockerBuild') {
-  //        dir('.') {
-  //            deleteDir()
-  //        }
-  //        checkout scm
-  //        echo "Checkout Done"
-  //        unstash 'artifacts'
-  //        sh """
-//            sudo docker login docker.demo.vizuri.com -u admin -p demopass34 
-//            sudo docker build -t docker.demo.vizuri.com/${image_project}/${app_name}:${release_number} .
-//            sudo docker push docker.demo.vizuri.com/${image_project}/${app_name}:${release_number}"""
-  //    }
-  //}
+  node () {
+      stage('DockerBuild') {
+//          dir('.') {
+//              deleteDir()
+//          }
+          checkout scm
+          echo "Checkout Done"
+          unstash 'artifacts'
+		  unstash 'docker'
+          sh """
+            //sudo docker login docker.demo.vizuri.com -u admin -p demopass34 
+            docker build -t fhir-patient-service:1.0 .
+            //sudo docker build -t docker.demo.vizuri.com/${image_project}/${app_name}:${release_number} .
+            //sudo docker push docker.demo.vizuri.com/${image_project}/${app_name}:${release_number}"""
+      }
+  }
+  
+  
+  
   //node () {
   //    stage('DockerBuild') {
   //        dir('.') {
