--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -187,7 +187,7 @@ node('maven') {
 		  
 		  docker.build('fhir/fhir-patient-service', "fhir-patient-service")
 		  
-		  docker.withRegistry('https://505576296154.dkr.ecr.us-east-1.amazonaws.com', 'AWS') {
+		  docker.withRegistry('https://505576296154.dkr.ecr.us-east-1.amazonaws.com', 'ecr:us-east-1:AWS') {
 			  docker.image('fhir/fhir-patient-service').push('1.0')
 			}
 		  
