--- a/openshift/templates/springboot-pipeline.yaml
+++ b/openshift/templates/springboot-pipeline.yaml
@@ -189,7 +189,7 @@ objects:
   spec:
     replicas: 1
     strategy:
-      type: "Recreate"
+      type: "Rolling"
     template:
       metadata:
         labels:
