--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -8,6 +8,7 @@ def javaDeliveryPipeline = new com.vizuri.openshift.JavaDeliveryPipeline();
 
 javaDeliveryPipeline {
 	app_name = 'fhir-patient-service'
+	project_folder = 'fhir-patient-service'
 	ocp_dev_cluster = 'aws-ocp-02'
 	ocp_dev_project = 'fhir-development'
 	ocp_test_cluster = 'aws-ocp-02'
