--- a/fhir-patient-service/Dockerfile
+++ b/fhir-patient-service/Dockerfile
@@ -1,4 +1,5 @@
-FROM registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.4
+FROM registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.5
+#FROM registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.4
 COPY target/fhir-patient-service*.jar /deployments
 
 
