--- a/fhir-parent/pom.xml
+++ b/fhir-parent/pom.xml
@@ -1,13 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.vizuri.fhir</groupId>
-	<artifactId>fhir-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	
 	<properties>
 		<nexus.url>http://nexus:8081</nexus.url>
-	</properties>
+		<build.number>0.0.1-SNAPSHOT</build.number>	
+	</properties>	
+	
+	<groupId>com.vizuri.fhir</groupId>
+	<artifactId>fhir-parent</artifactId>
+	<!-- <version>0.0.1-SNAPSHOT</version> -->
+	<version>${build.number}</version>
+	<packaging>pom</packaging>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
