--- a/fhir-base/pom.xml
+++ b/fhir-base/pom.xml
@@ -3,7 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fhir-base</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<name>fhir-base</name>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<build.number>0.0.1-SNAPSHOT</build.number>	
+	</properties>
+	
+	<version>${build.number}</version>
 
 	<parent>
 		<groupId>com.vizuri.fhir</groupId>
