--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -1,9 +1,6 @@
 #!/usr/bin/groovy
 @Library('github.com/vizuri/openshift-pipeline-templates@master')
-
-def utils = new com.vizuri.openshift.Utils();
-
-def javaDeliveryPipeline = new com.vizuri.openshift.JavaDeliveryPipelineOCP();
+def javaDeliveryPipeline = new com.vizuri.openshift.TestPipeline();
 
 javaDeliveryPipeline {
 	app_name = 'fhir-patient-service'
@@ -15,3 +12,15 @@ javaDeliveryPipeline {
 	ocp_prod_cluster = 'ocp-nonprod-01'
 	ocp_prod_project = 'fhir-prod'
 }
+//def javaDeliveryPipeline = new com.vizuri.openshift.JavaDeliveryPipelineOCP();
+//
+//javaDeliveryPipeline {
+//	app_name = 'fhir-patient-service'
+//	project_folder = 'fhir-patient-service'
+//	ocp_dev_cluster = 'ocp-nonprod-01'
+//	ocp_dev_project = 'fhir-development'
+//	ocp_test_cluster = 'ocp-nonprod-01'
+//	ocp_test_project = 'fhir-test'
+//	ocp_prod_cluster = 'ocp-nonprod-01'
+//	ocp_prod_project = 'fhir-prod'
+//}
