--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -2,6 +2,8 @@
 @Library('github.com/vizuri/openshift-pipeline-templates@master')
 def javaDeliveryPipeline = new com.vizuri.openshift.TestPipeline();
 
+def javaDeliveryPipeline = new com.vizuri.openshift.JavaDeliveryPipelineOCP();
+
 javaDeliveryPipeline {
 	app_name = 'fhir-patient-service'
 	project_folder = 'fhir-patient-service'
@@ -12,15 +14,3 @@ javaDeliveryPipeline {
 	ocp_prod_cluster = 'ocp-nonprod-01'
 	ocp_prod_project = 'fhir-prod'
 }
-//def javaDeliveryPipeline = new com.vizuri.openshift.JavaDeliveryPipelineOCP();
-//
-//javaDeliveryPipeline {
-//	app_name = 'fhir-patient-service'
-//	project_folder = 'fhir-patient-service'
-//	ocp_dev_cluster = 'ocp-nonprod-01'
-//	ocp_dev_project = 'fhir-development'
-//	ocp_test_cluster = 'ocp-nonprod-01'
-//	ocp_test_project = 'fhir-test'
-//	ocp_prod_cluster = 'ocp-nonprod-01'
-//	ocp_prod_project = 'fhir-prod'
-//}
