--- a/fhir-patient-service/Jenkinsfile
+++ b/fhir-patient-service/Jenkinsfile
@@ -3,13 +3,24 @@
 
 def javaDeliveryPipeline = new com.vizuri.openshift.JavaDeliveryPipelineOCP();
 
+//javaDeliveryPipeline {
+//	app_name = 'fhir-patient-service'
+//	project_folder = 'fhir-patient-service'
+//	ocp_dev_cluster = 'ocp-nonprod-01'
+//	ocp_dev_project = 'fhir-development'
+//	ocp_test_cluster = 'ocp-nonprod-01'
+//	ocp_test_project = 'fhir-test'
+//	ocp_prod_cluster = 'ocp-nonprod-01'
+//	ocp_prod_project = 'fhir-prod'
+//}
+
 javaDeliveryPipeline {
 	app_name = 'fhir-patient-service'
 	project_folder = 'fhir-patient-service'
-	ocp_dev_cluster = 'ocp-nonprod-01'
+	ocp_dev_cluster = 'aws-ocp-02'
 	ocp_dev_project = 'fhir-development'
-	ocp_test_cluster = 'ocp-nonprod-01'
+	ocp_test_cluster = 'aws-ocp-02'
 	ocp_test_project = 'fhir-test'
-	ocp_prod_cluster = 'ocp-nonprod-01'
+	ocp_prod_cluster = 'aws-ocp-02'
 	ocp_prod_project = 'fhir-prod'
 }
