--- a/fhir-risk-assessment-bulk-service/src/main/resources/application-openshift.properties
+++ b/fhir-risk-assessment-bulk-service/src/main/resources/application-openshift.properties
@@ -16,11 +16,19 @@ management.port=8081
 endpoints.enabled = false
 endpoints.health.enabled = true
 
-OCP_WILDCARD_DNS=192.168.99.100.nip.io
+#OCP_WILDCARD_DNS=192.168.99.100.nip.io
 
-service.patient.host=${SERVICE_PATIENT_HOST:http://fhir-patient-service-fhir-development.${OCP_WILDCARD_DNS}/patient}
-service.observation.host=${SERVICE_OBSERVATION_HOST:http://fhir-observation-service-fhir-development.${OCP_WILDCARD_DNS}/observation}
-service.questionnaire.host=${SERVICE_QUESTIONNAIRE_HOST:http://fhir-questionnaireresponse-service-fhir-development.${OCP_WILDCARD_DNS}/questionnaireResponse}
-service.riskassessment.heart.host=${SERVICE_RISKASSESSMENT_HEART_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/heartDisease}
-service.riskassessment.framingham.host=${SERVICE_RISKASSESSMENT_FRAMINGHAM_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/framingham}
-service.riskassessment.diabetes.host=${SERVICE_RISKASSESSMENT_DIABETES_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/diabetes}
+service.patient.host=${SERVICE_PATIENT_HOST:http://fhir-patient-service:8080/patient}
+service.observation.host=${SERVICE_OBSERVATION_HOST:http://fhir-observation-service:8080/observation}
+service.questionnaire.host=${SERVICE_QUESTIONNAIRE_HOST:http://fhir-questionnaireresponse-service:8080/questionnaireResponse}
+service.riskassessment.heart.host=${SERVICE_RISKASSESSMENT_HEART_HOST:http://fhir-riskassessment-service:8080/riskAssessment/heartDisease}
+service.riskassessment.framingham.host=${SERVICE_RISKASSESSMENT_FRAMINGHAM_HOST:http://fhir-riskassessment-service:8080/riskAssessment/framingham}
+service.riskassessment.diabetes.host=${SERVICE_RISKASSESSMENT_DIABETES_HOST:http://fhir-riskassessment-service:8080/riskAssessment/diabetes}
+
+
+#service.patient.host=${SERVICE_PATIENT_HOST:http://fhir-patient-service-fhir-development.${OCP_WILDCARD_DNS}/patient}
+#service.observation.host=${SERVICE_OBSERVATION_HOST:http://fhir-observation-service-fhir-development.${OCP_WILDCARD_DNS}/observation}
+#service.questionnaire.host=${SERVICE_QUESTIONNAIRE_HOST:http://fhir-questionnaireresponse-service-fhir-development.${OCP_WILDCARD_DNS}/questionnaireResponse}
+#service.riskassessment.heart.host=${SERVICE_RISKASSESSMENT_HEART_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/heartDisease}
+#service.riskassessment.framingham.host=${SERVICE_RISKASSESSMENT_FRAMINGHAM_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/framingham}
+#service.riskassessment.diabetes.host=${SERVICE_RISKASSESSMENT_DIABETES_HOST:http://fhir-riskassessment-service-fhir-development.${OCP_WILDCARD_DNS}/riskAssessment/diabetes}
