--- a/fhir-patient-service/pom.xml
+++ b/fhir-patient-service/pom.xml
@@ -176,6 +176,11 @@
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-help-plugin</artifactId>
+        <version>3.1.0</version>
+      </plugin>
 
 		</plugins>
 	</build>
