--- a/fhir-parent/Jenkinsfile
+++ b/fhir-parent/Jenkinsfile
@@ -12,10 +12,10 @@ javaDeliveryPipeline {
     registryUsername = 'admin'
     registryPassword = 'P@ssw0rd'
     app_name = 'fhir-parent'
-    ocp_dev_cluster = 'ocp-demo'
+    ocp_dev_cluster = 'ocpdemo'
     ocp_dev_project = 'demo-fhir-dev'
-    ocp_test_cluster = 'ocp-demo'
+    ocp_test_cluster = 'ocpdemo'
     ocp_test_project = 'demo-fhir-test'
-    ocp_prod_cluster = 'ocp-demo'
+    ocp_prod_cluster = 'ocpdemo'
     ocp_prod_project = 'demo-fhir-prod'
 }
