--- a/fhir-parent/Jenkinsfile
+++ b/fhir-parent/Jenkinsfile
@@ -18,4 +18,5 @@ javaDeliveryPipeline {
     ocp_test_project = 'demo-fhir-test'
     ocp_prod_cluster = 'ocpdemo'
     ocp_prod_project = 'demo-fhir-prod'
+    project_folder = 'fhir-parent'
 }
